[package]
name = "debpkg"

description = "Library for parsing debian packages"

homepage = "https://github.com/schultetwin1/debpkg/"
repository = "https://github.com/schultetwin1/debpkg/"

version = "0.4.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.8"
arrayvec = "0.5.1"
bzip2 = "0.3.3"
flate2 = "1.0"
log = "0.4.8"
indexmap = "1.3.0"
tar = "0.4"
xz2 = "0.1"

[dev-dependencies]
assert_matches = "1.2"
tempfile = "3.1"
