[package]
name = "debpkg"

description = "Library for parsing debian packages"

homepage = "https://github.com/schultetwin1/debpkg/"
repository = "https://github.com/schultetwin1/debpkg/"

version = "0.5.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9"
arrayvec = "0.7"
bzip2 = "0.4"
flate2 = "1.0"
infer = "0.6"
log = "0.4"
indexmap = "1.6"
tar = "0.4"
xz2 = "0.1"
zstd = "0.9"

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.2"
