[package]
name = "debpkg"

description = "Library for parsing debian packages"

homepage = "https://github.com/schultetwin1/debpkg/"
repository = "https://github.com/schultetwin1/debpkg/"

version = "0.6.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9"
bzip2 = { version = "0.5", optional = true }
flate2 = { version = "1.1", optional = true }
infer = "0.19"
log = "0.4"
indexmap = "2.9.0"
tar = "0.4"
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.20.0"

[features]
default = ["bzip2", "gzip", "xz", "zstd"]
gzip = ["flate2"]
xz = ["xz2"]
